fix+refactor: completar traducción y limpiar código en controladores